update resources properties

--- a/ProjektWatki/ProjektWatki/ProjektWatki.csproj
+++ b/ProjektWatki/ProjektWatki/ProjektWatki.csproj
@@ -53,39 +53,105 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Resources\car10b.png" />
-    <Resource Include="Resources\car10t.png" />
-    <Resource Include="Resources\car11b.png" />
-    <Resource Include="Resources\car11t.png" />
-    <Resource Include="Resources\car12b.png" />
-    <Resource Include="Resources\car12t.png" />
-    <Resource Include="Resources\car1b.png" />
-    <Resource Include="Resources\car1t.png" />
-    <Resource Include="Resources\car2b.png" />
-    <Resource Include="Resources\car2t.png" />
-    <Resource Include="Resources\car3b.png" />
-    <Resource Include="Resources\car3t.png" />
-    <Resource Include="Resources\car4b.png" />
-    <Resource Include="Resources\car4t.png" />
-    <Resource Include="Resources\car5b.png" />
-    <Resource Include="Resources\car5t.png" />
-    <Resource Include="Resources\car6b.png" />
-    <Resource Include="Resources\car6t.png" />
-    <Resource Include="Resources\car7b.png" />
-    <Resource Include="Resources\car7t.png" />
-    <Resource Include="Resources\car8b.png" />
-    <Resource Include="Resources\car8t.png" />
-    <Resource Include="Resources\car9b.png" />
-    <Resource Include="Resources\car9t.png" />
-    <Resource Include="Resources\mapa_v5.png" />
-    <Resource Include="Resources\railway_barrier_1.png" />
-    <Resource Include="Resources\railway_barrier_2.png" />
-    <Resource Include="Resources\railway_barrier_3.png" />
-    <Resource Include="Resources\railway_barrier_4.png" />
-    <Resource Include="Resources\train1.png" />
-    <Resource Include="Resources\train2.png" />
-    <Resource Include="Resources\train3.png" />
-    <Resource Include="Resources\train4.png" />
+    <Content Include="Resources\car10b.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car10t.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car11b.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car11t.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car12b.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car12t.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car1b.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car1t.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car2b.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car2t.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car3b.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car3t.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car4b.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car4t.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car5b.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car5t.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car6b.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car6t.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car7b.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car7t.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car8b.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car8t.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car9b.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\car9t.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\mapa_v5.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\railway_barrier_1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\railway_barrier_2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\railway_barrier_3.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\railway_barrier_4.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\train1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\train2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\train3.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\train4.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
